--- a/style.css
+++ b/style.css
@@ -1,5 +1,40 @@
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+header {
+    text-align: center;
+}
+
+nav a {
+    background-color: greenyellow;
+    padding: 0 10px 0 10px;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+figcaption {
+    font-size: small;
+    text-align: center;
+}
+
+#featured-property p {
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+#details div {
+    float: left;
+    width: 25%;
+    text-align: center;
+    background-color: deepskyblue;
 }
